restructure to align with landing page

--- a/_posts/101-intro-vizcom/101-intro-vizcom.Rmd
+++ b/_posts/101-intro-vizcom/101-intro-vizcom.Rmd
@@ -11,7 +11,7 @@ author:
     url: https://graphicsprinciples.github.io/
   - name: "Baldur Magnusson"
     url: https://graphicsprinciples.github.io/
-date: 03-29-2019
+date: 08-06-2019
 categories:
   - introduction
 draft: FALSE
@@ -27,4 +27,4 @@ knitr::opts_chunk$set(echo = FALSE)
 
 Effective visual communication is a core competency for pharmacometricians, statisticians, and more generally any quantitative scientist. It is essential in every step of a quantitative workflow, from scoping to execution and communicating results and conclusions. With this competency, we can better understand data and influence decisions towards appropriate actions. Without it, we can fool ourselves and others and pave the way to wrong conclusions and actions. The goal of this tutorial is to convey this competency. We posit three laws of effective visual communication for the quantitative scientist: have a clear purpose, show the data clearly, and make the message obvious. A concise “Cheat Sheet”, available on https://graphicsprinciples.github.io, distills more granular recommendations for everyday practical use. Finally, these laws and recommendations are illustrated in four case studies.
 
-The aim of this site is to provide both the code, data and examples as stand alone posts. A pre-print of the complete tutorial (in submission) can also be found at: https://arxiv.org/abs/1903.09512
+The aim of this site is to provide both the code, data and examples as stand alone posts. A pre-print of the complete tutorial can also be found at: https://arxiv.org/abs/1903.09512
