--- a/_posts/301-cheatsheet/301-cheatsheet.Rmd
+++ b/_posts/301-cheatsheet/301-cheatsheet.Rmd
@@ -16,7 +16,7 @@ categories:
   - cheat sheet
   - principles
 bibliography: paper.bib
-draft: FALSE
+draft: TRUE
 preview: https://raw.githubusercontent.com/GraphicsPrinciples/GraphicsPrinciples.github.io/master/assets/2018-11-06_thumbnail.png
 output:
   radix::radix_article:
