--- a/_posts/201-three-laws-vizcom/201-three-laws-vizcom.Rmd
+++ b/_posts/201-three-laws-vizcom/201-three-laws-vizcom.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Three laws of visual communication"
 description: |
-  The Three laws of visual communication for the quantitative scientist
+  ... for the quantitative scientist. Effective visual communication follows three laws: 1.)	Have a clear purpose; 2.)	Show the data clearly; and 3.)	Make the message obvious. These three laws correspond to the three main ingredients of any quantitative work: purpose, data, and message. Getting these right leads to success; failing in any of them leads to overall failure. 
 author:
   - name: "Marc Vandemeulebroecke"  
     url: https://graphicsprinciples.github.io/
@@ -12,41 +12,38 @@ author:
   - name: "Baldur Magnusson"
     url: https://graphicsprinciples.github.io/
 date: "`r Sys.Date()`"
+bibliography: refs.bib
 categories:
   - three laws
   - principles
-bibliography: paper.bib
-draft: TRUE
+draft: FALSE
 output:
   radix::radix_article:
     self_contained: FALSE
     toc: TRUE
 ---
 
-In quantitative sciences, effective visual communication follows three laws:
-
-1.	Have a clear purpose
-2.	Show the data clearly
-3.	Make the message obvious
-
-These three laws correspond to the three main ingredients of any quantitative work: purpose, data, and message. Getting these right leads to success; failing in any of them leads to overall failure. In the next subsections, we discuss each of these laws in turn. 
-
 ## Law 1: Have a clear purpose
 
 Why? [@sinek2009start; @Bonate2014] What is the purpose of this display or that communication? Doumont [@Doumont2002] states this as the “zeroth law” of professional communication, “a principle so obvious that it had long been overlooked”. Be clear and explicit about what you want to achieve. Is it to explore some data, to convey an inferential analysis, to deliver a message, convince an audience, or support a decision? It may be a mixture of these – for example, even seemingly simple exploratory plots should serve some (perhaps implicit) decision (e.g. on how to explore further). Every graph, and more generally every communication, must be tailored to its specific purpose.
-It helps to carve out the scientific question you are trying to address, ideally in discussion with partners, and to write it down explicitly. Try not to look at any data before. This is the concept of “question-based visualizations”[@Vandemeulebroecke2019]: let the scientific question determine what data to display and how. (For example, combine data from different domains if it helps address the question effectively. Do not only produce standard outputs by data domain – a display should be determined by the question it addresses, not by the way the data is organized.) As Diggle [@Diggle2018] put it, we “analyze problems, not data”. This does not mean that the question could not be refined after seeing the data. We may well iterate over the problem space and the solution space – as long as we do it consciously. Senn [@senn2008statistical] illustrates many examples of wrongly framed research questions. A common one is to focus on the wrong comparison, such as comparing a post-treatment value to the corresponding baseline value instead of to the value under a control treatment. Most quantitative graphs display comparisons [@Gelman2002], and it always helps to ask “compared to what?” [@Tufte1986]. If the comparison is not clear to the author, it will also not be clear to the reader.
+
+It helps to carve out the scientific question you are trying to address, ideally in discussion with partners, and to write it down explicitly. Try not to look at any data before. This is the concept of “question-based visualizations”[@Vandemeulebroecke2019]: let the scientific question determine what data to display and how. (For example, combine data from different domains if it helps address the question effectively. Do not only produce standard outputs by data domain – a display should be determined by the question it addresses, not by the way the data is organized.). As Diggle [@Diggle2018] put it, we “analyze problems, not data”. This does not mean that the question could not be refined after seeing the data. We may well iterate over the problem space and the solution space – as long as we do it consciously. Senn [@senn2008statistical] illustrates many examples of wrongly framed research questions. A common one is to focus on the wrong comparison, such as comparing a post-treatment value to the corresponding baseline value instead of to the value under a control treatment. Most quantitative graphs display comparisons [@Gelman2002], and it always helps to ask “compared to what?” [@Tufte1986]. If the comparison is not clear to the author, it will also not be clear to the reader.
 
 Part of this first law (and of the third, see below) is also to be clear about your audience. Then, to adapt to your audience. Do not assume it will adapt to you. You cannot control your audience, but you can control what information and messages you deliver to it, and how. Is your audience just you (trying to see patterns in data), you in a few years (trying to remember what you did), quantitative experts such as your peers (interested in your methods), subject matter experts (eager for your main message), decision-makers (headlines only), or a mixture of these? Your visual communication will need to be different accordingly. Your communication (plot, presentation, report) is for the audience, not for you.
 
 Clarity on the purpose and the scientific question of interest will help choose appropriate quantitative methods to address them. This, plus clarity on your audience, will help define the key messages and how to deliver them. (On the aspect of delivery see also Law 3 below.)
+
 Of note, this first law is so important that it may occasionally defy other good principles. If your primary goal is to catch attention, then you may choose an iconic graphical representation that does this well, even if it violates some of the recommendations given further below [@Gelman2013]. However, you should never distort the data.
 
 ## Law 2: Show the data clearly
 
 This is Tufte’s maxim [@Tufte1986]: “Above all else, show the data”. Show it accurately and clearly. This law has several faces:
-Simplify! “Simplify to clarify” [@Wong2010]. It is the prime task of quantitative scientists to make the complex simple: reveal structure in data through models, make inference through analyses, distill and convey conclusions through (visual) communication. Choose the simplest appropriate graph type; prefer familiar designs over fancy ones (see also the Cleveland-McGill effectiveness ranking in Law 3 below). Avoid fake dimensions. Make your plot “as simple as it can be, but not simpler” (attributed to Albert Einstein; also “Occam’s razor” or the law of parsimony). “Understand, edit and simplify the information and design with your readers in mind” [@wong2010wall]. Do not be confused: it is hard to make things simple. This is an iterative process: “edit and revise” [@Tufte1986], and repeat. 
 
-Maximize the data-to-ink ratio (also “data density index” [@Tufte1986]) within reason. Maximize the signal over the noise by removing the noise: remove anything that distracts from the purpose of the graph. Nothing is neutral: the choice of symbols or colors, background, fonts, line style, annotations. These elements are noise if they do not serve a clear purpose. Choose them wisely and parsimoniously; make the data stand out. Do not trust defaults in graphical software packages. Often, intelligent use of white space can structure a display better than a lot of ink. (The same holds for tables: these are often most effectively structured by reserving black lines for the horizontal direction and using simple alignment in the vertical direction.) Never clutter your graph with “chart junk” [@Tufte1997]. Display the relevant data directly. In a quantitative workflow, this often means to look at the raw data and not just rely on summary statistics. Cabanski8 illustrates this with nine datasets that show completely different patterns despite identical marginal means, standard deviations and correlation coefficients (see also Anscombe [@Anscombe1973] and Matejka and Fitzmaurice [@Matejka2017]). Ask yourself what is the best way of summarizing the relevant features of the data; it may not be the mean +/- standard error. When fitting a (statistical, compartmental, mechanistic etc.) model to the data to draw inference or make predictions, model-derived quantities may be the relevant data to display. In this case a plot of the raw data may be misleading if it does not account for important covariates. In a final communication, display concisely what best supports your message (see also below, Law 3).
+* Simplify! “Simplify to clarify” [@Wong2010]. It is the prime task of quantitative scientists to make the complex simple: reveal structure in data through models, make inference through analyses, distill and convey conclusions through (visual) communication. Choose the simplest appropriate graph type; prefer familiar designs over fancy ones (see also the Cleveland-McGill effectiveness ranking in Law 3 below). Avoid fake dimensions. Make your plot “as simple as it can be, but not simpler” (attributed to Albert Einstein; also “Occam’s razor” or the law of parsimony). “Understand, edit and simplify the information and design with your readers in mind” [@wong2010wall]. Do not be confused: it is hard to make things simple. This is an iterative process: “edit and revise” [@Tufte1986], and repeat. 
+
+* Maximize the data-to-ink ratio (also “data density index” [@Tufte1986]) within reason. Maximize the signal over the noise by removing the noise: remove anything that distracts from the purpose of the graph. Nothing is neutral: the choice of symbols or colors, background, fonts, line style, annotations. These elements are noise if they do not serve a clear purpose. Choose them wisely and parsimoniously; make the data stand out. Do not trust defaults in graphical software packages. Often, intelligent use of white space can structure a display better than a lot of ink. (The same holds for tables: these are often most effectively structured by reserving black lines for the horizontal direction and using simple alignment in the vertical direction.) Never clutter your graph with “chart junk” [@Tufte1997]. 
+
+* Display the relevant data directly. In a quantitative workflow, this often means to look at the raw data and not just rely on summary statistics. Cabanski8 illustrates this with nine datasets that show completely different patterns despite identical marginal means, standard deviations and correlation coefficients (see also Anscombe [@Anscombe1973] and Matejka and Fitzmaurice [@Matejka2017]). Ask yourself what is the best way of summarizing the relevant features of the data; it may not be the mean +/- standard error. When fitting a (statistical, compartmental, mechanistic etc.) model to the data to draw inference or make predictions, model-derived quantities may be the relevant data to display. In this case a plot of the raw data may be misleading if it does not account for important covariates. In a final communication, display concisely what best supports your message (see also below, Law 3).
 
 ```{r, layout="l-body-outset", fig.cap="Law 2, show the data clearly. The pie and donut charts in panels A and B make it difficult to see the order of magnitude of some of the segments. The eye needs to compare areas, bent lengths (of the contour) or angles, graphical attributes that are not easily decoded. The donut chart even omits the angles. The mosaic plot in panel C only relies on areas; again it is hard to tell the order of magnitude. It is better to use lengths with a common baseline or positions on a common scale, such as in a barchart or dotplot (see Cleveland-McGill effectiveness ranking in Law 3). The barchart in panel D however introduces a fake dimension, which is unnecessary and makes it hard to decode the numerical values from the height of the bars. Panels E and F are appropriately simple and show the data clearly. They also order the data by magnitude to aid comparison even further. The dotplot in panel F uses minimal amount of ink and draws the eye to the position of the dots; it is the most effective way of displaying this data."}
 knitr::include_graphics("Figure1b.png")
@@ -64,15 +61,15 @@ Clarity on your audience, mentioned already in the first law, is also a prerequi
 
 Specific examples for the third law include the following:
 
-*	Choose wisely how to encode the data you display. Color and area are good for drawing attention, but a viewer can decode positions on a common scale much more easily and accurately. Consider the effectiveness ranking of graphical attributes for encoding numerical values, as proposed by Cleveland and McGill [@Cleveland1985; @Cleveland1984; Cleveland.McGill1984; Cleveland1987; @Cleveland.McGill1985] (see also Cairo [@Cairo:2016], Munzner [@munzner2015visualization], and Heer and Bostock [@Heer:2010]). See Figure 4 for a representation of this ranking. 
+*	Choose wisely how to encode the data you display. Color and area are good for drawing attention, but a viewer can decode positions on a common scale much more easily and accurately. Consider the effectiveness ranking of graphical attributes for encoding numerical values, as proposed by Cleveland and McGill [@Cleveland1985; @Cleveland1984; Cleveland.McGill1984; Cleveland1987; @Cleveland.McGill1985] (see also Cairo [@Cairo:2016], Munzner [@munzner2015visualization], and Heer and Bostock [@Heer:2010]). See [here](https://flowingdata.com/2010/03/20/graphical-perception-learn-the-fundamentals-first/) for an overview of this ranking. 
 
-*	Exploit pre-attentive processing as much as possible [@Few:2012; @Ware:2004]. Some graphical features “jump to the eye” while others require careful inspection. Consider this in your choice of how to encode the data (Cleveland-McGill effectiveness ranking, see above) and in your choice of symbols, colors, line types etc. See Figure 2 for an illustration.
+*	Exploit pre-attentive processing as much as possible [@Few:2012; @Ware:2004]. Some graphical features “jump to the eye” while others require careful inspection. Consider this in your choice of how to encode the data (Cleveland-McGill effectiveness ranking, see above) and in your choice of symbols, colors, line types etc. See [here](http://daydreamingnumbers.com/blog/preattentive-attributes-example/) for an illustration.
 
 *	Avoid mental arithmetic. If differences or ratios are the main interest, show them directly. If both raw values and differences are of interest, consider showing both.
 
 *	Exploit the principles of visual grouping [@Wong2010PointsOV]. Graphical entities are most effectively grouped by enclosure, connection, proximity and similarity (in this order). That is, similar objects are perceived as belonging together, as are objects close to each other, connected by lines, or enclosed in a common subspace. See Figure 3 for an illustration: these mechanisms can provide contextual information to a plot in a simple yet powerful way.
 
-*	Minimize the viewer’s eye movement. Place elements that are to be compared close to each other. Prefer direct labelling over a legend. See also Figure 5.
+*	Minimize the viewer’s eye movement. Place elements that are to be compared close to each other. Prefer direct labelling over a legend. See also [here](https://www.storytellingwithdata.com/?offset=1531087200576).
 
 *	Draw the reader’s attention to the main points. Use appropriate graphical features (e.g. bold or colored highlighting, reference lines, circling etc.). Follow up with explicit labelling (e.g. “treatment A outperforms treatment B by X%”).
 
