--- a/_posts/201-three-laws-vizcom/refs.bib
+++ b/_posts/201-three-laws-vizcom/refs.bib
@@ -1,3 +1,12 @@
+@book{sinek2009start,
+  title={Start with Why: How Great Leaders Inspire Everyone to Take Action},
+  author={Sinek, S.},
+  isbn={9781101149034},
+  url={https://books.google.com/books?id=iyw6ul1x\_n8C},
+  year={2009},
+  publisher={Penguin Publishing Group}
+}
+
 @article{Gabry2019,
 author = {Gabry, Jonah and Simpson, Daniel and Vehtari, Aki and Betancourt, Michael and Gelman, Andrew},
 title = {Visualization in Bayesian workflow},
@@ -29,7 +38,7 @@ eprint = {https://doi.org/10.1198/106186004X11435}
 
 
 @book{Cleveland1985,
- author = {Cleveland, William S.},
+ author = {William S. Cleveland},
  title = {The Elements of Graphing Data},
  year = {1985},
  isbn = {0-534-03730-5},
@@ -47,19 +56,10 @@ pages = {829-836},
 year  = {1979},
 publisher = {Taylor & Francis},
 doi = {10.1080/01621459.1979.10481038},
-URL = { 
-        https://amstat.tandfonline.com/doi/abs/10.1080/01621459.1979.10481038},
+URL = {https://amstat.tandfonline.com/doi/abs/10.1080/01621459.1979.10481038},
 eprint = {https://amstat.tandfonline.com/doi/pdf/10.1080/01621459.1979.10481038}
 }
 
-@book{sinek2009start,
-  title={Start with Why: How Great Leaders Inspire Everyone to Take Action},
-  author={Sinek, S.},
-  isbn={9781101149034},
-  url={https://books.google.com/books?id=iyw6ul1x\_n8C},
-  year={2009},
-  publisher={Penguin Publishing Group}
-}
 
 @book{Bonate2014,
   title={Be a Model Communicator And Sell Your Models to Anyone},
@@ -97,6 +97,73 @@ eprint = {https://onlinelibrary.wiley.com/doi/pdf/10.1002/pst.1912},
 year = {2019}
 }
 
+
+@book{Cairo:2016,
+ author = {Cairo, Alberto},
+ title = {The Truthful Art: Data, Charts, and Maps for Communication},
+ year = {2016},
+ isbn = {0321934075, 9780321934079},
+ edition = {1st},
+ publisher = {New Riders Publishing},
+ address = {Thousand Oaks, CA, USA}
+} 
+
+
+@book{Few:2012,
+ author = {Few, Stephen},
+ title = {Show Me the Numbers: Designing Tables and Graphs to Enlighten},
+ year = {2012},
+ isbn = {0970601972},
+ edition = {2nd},
+ publisher = {Analytics Press},
+ address = {USA}
+} 
+
+@book{Ware:2004,
+ author = {Ware, Colin},
+ title = {Information Visualization: Perception for Design},
+ year = {2004},
+ isbn = {1558608192},
+ publisher = {Morgan Kaufmann Publishers Inc.},
+ address = {San Francisco, CA, USA}
+} 
+
+
+@article{Wong2010PointsOV,
+  title={Points of View: Gestalt principles (Part 1)},
+  author={Bang Wong},
+  journal={Nature Methods},
+  year={2010},
+  volume={7},
+  pages={863-863}
+}
+
+@book{doumont2009trees,
+  title={Trees, Maps, and Theorems: Effective Communication for Rational Minds},
+  author={Doumont, J.L.},
+  isbn={9789081367707},
+  url={https://books.google.com/books?id=O2dFPgAACAAJ},
+  year={2009},
+  publisher={Principiae}
+}
+
+@inproceedings{Heer:2010,
+ author = {Heer, Jeffrey and Bostock, Michael},
+ title = {Crowdsourcing Graphical Perception: Using Mechanical Turk to Assess Visualization Design},
+ booktitle = {Proceedings of the SIGCHI Conference on Human Factors in Computing Systems},
+ series = {CHI '10},
+ year = {2010},
+ isbn = {978-1-60558-929-9},
+ location = {Atlanta, Georgia, USA},
+ pages = {203--212},
+ numpages = {10},
+ url = {http://doi.acm.org/10.1145/1753326.1753357},
+ doi = {10.1145/1753326.1753357},
+ acmid = {1753357},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {crowdsourcing, evaluation, experimentation, graphical perception, information visualization, mechanical turk, user study}
+} 
 
 @article{Diggle2018,
 title = "Analyse problems, not data: One world, one health",
@@ -181,7 +248,7 @@ URL = {https://www.nature.com/articles/nmeth.1660}
   lccn={2009035687},
   url={https://books.google.com/books?id=RmaJPgAACAAJ},
   year={2010},
-  publisher={W.W. Norton \& Company}
+  publisher={W.W. Norton & Company}
 }
 
 @book{Tufte1997,
@@ -192,6 +259,8 @@ URL = {https://www.nature.com/articles/nmeth.1660}
  publisher = {Graphics Press},
  address = {Cheshire, CT, USA},
 } 
+
+
 
 
 @inproceedings{Matejka2017,
@@ -209,7 +278,7 @@ URL = {https://www.nature.com/articles/nmeth.1660}
  acmid = {3025912},
  publisher = {ACM},
  address = {New York, NY, USA},
- keywords = {anscombe, scatter plots, visualization},
+ keywords = {anscombe, scatter plots, visualization}
 }
 
 @article{Anscombe1973,
@@ -226,7 +295,7 @@ URL = {https://www.nature.com/articles/nmeth.1660}
 }
 
 @article{Wainer1984,
-author = { Howard Wainer},
+author = {Howard Wainer},
 title = {How to Display Data Badly},
 journal = {The American Statistician},
 volume = {38},
@@ -238,6 +307,7 @@ doi = {10.1080/00031305.1984.10483186},
 URL = {https://www.tandfonline.com/doi/abs/10.1080/00031305.1984.10483186},
 eprint = {https://www.tandfonline.com/doi/pdf/10.1080/00031305.1984.10483186}
 }
+
 
 
 @article{Krzywinski2013,
@@ -252,86 +322,16 @@ URL = {https://www.nature.com/articles/nmeth.2699}
 }
 
 @book{munzner2015visualization,
-  added-at = {2017-10-07T07:41:41.000+0200},
-  author = {Munzner, T.},
-  biburl = {https://www.bibsonomy.org/bibtex/29643da4f95f0ec7783796c8120323731/dirk-rathje},
-  description = {Visualization Analysis and Design - Tamara Munzner - Google Books},
-  interhash = {d54fe9741669e61b48797b1442bc3bc1},
-  intrahash = {9643da4f95f0ec7783796c8120323731},
+  author = {Tamara Munzner},
   isbn = {9781498759717},
   keywords = {safaribooks visualization},
   publisher = {CRC Press},
   series = {AK Peters Visualization Series},
-  timestamp = {2017-10-07T07:41:41.000+0200},
   title = {Visualization Analysis and Design},
   url = {https://books.google.de/books?id=NfkYCwAAQBAJ},
-  year = 2015
+  year = {2015}
 }
 
-@book{Cairo:2016,
- author = {Cairo, Alberto},
- title = {The Truthful Art: Data, Charts, and Maps for Communication},
- year = {2016},
- isbn = {0321934075, 9780321934079},
- edition = {1st},
- publisher = {New Riders Publishing},
- address = {Thousand Oaks, CA, USA},
-} 
-
-@book{Few:2012,
- author = {Few, Stephen},
- title = {Show Me the Numbers: Designing Tables and Graphs to Enlighten},
- year = {2012},
- isbn = {0970601972, 9780970601971},
- edition = {2nd},
- publisher = {Analytics Press},
- address = {USA},
-} 
-
-@book{Ware:2004,
- author = {Ware, Colin},
- title = {Information Visualization: Perception for Design},
- year = {2004},
- isbn = {1558608192},
- publisher = {Morgan Kaufmann Publishers Inc.},
- address = {San Francisco, CA, USA},
-} 
-
-@article{Wong2010PointsOV,
-  title={Points of View: Gestalt principles (Part 1)},
-  author={Bang Wong},
-  journal={Nature Methods},
-  year={2010},
-  volume={7},
-  pages={863-863}
-}
-
-@book{doumont2009trees,
-  title={Trees, Maps, and Theorems: Effective Communication for Rational Minds},
-  author={Doumont, J.L.},
-  isbn={9789081367707},
-  url={https://books.google.com/books?id=O2dFPgAACAAJ},
-  year={2009},
-  publisher={Principi{\ae}}
-}
-
-@inproceedings{Heer:2010,
- author = {Heer, Jeffrey and Bostock, Michael},
- title = {Crowdsourcing Graphical Perception: Using Mechanical Turk to Assess Visualization Design},
- booktitle = {Proceedings of the SIGCHI Conference on Human Factors in Computing Systems},
- series = {CHI '10},
- year = {2010},
- isbn = {978-1-60558-929-9},
- location = {Atlanta, Georgia, USA},
- pages = {203--212},
- numpages = {10},
- url = {http://doi.acm.org/10.1145/1753326.1753357},
- doi = {10.1145/1753326.1753357},
- acmid = {1753357},
- publisher = {ACM},
- address = {New York, NY, USA},
- keywords = {crowdsourcing, evaluation, experimentation, graphical perception, information visualization, mechanical turk, user study},
-} 
 
 @article {Cleveland.McGill1985,
 	author = {Cleveland, William S. and McGill, Robert},
@@ -342,7 +342,6 @@ URL = {https://www.nature.com/articles/nmeth.2699}
 	year = {1985},
 	doi = {10.1126/science.229.4716.828},
 	publisher = {American Association for the Advancement of Science},
-	abstract = {Graphical perception is the visual decoding of the quantitative and qualitative information encoded on graphs. Recent investigations have uncovered basic principles of human graphical perception that have important implications for the display of data. The computer graphics revolution has stimulated the invention of many graphical methods for analyzing and presenting scientific data, such as box plots, two-tiered error bars, scatterplot smoothing, dot charts, and graphing on a log base 2 scale.},
 	issn = {0036-8075},
 	URL = {https://science.sciencemag.org/content/229/4716/828},
 	eprint = {https://science.sciencemag.org/content/229/4716/828.full.pdf},
@@ -350,50 +349,32 @@ URL = {https://www.nature.com/articles/nmeth.2699}
 }
 
 @article{Cleveland1987,
- ISSN = {00359238},
- URL = {http://www.jstor.org/stable/2981473},
- abstract = {Studies in graphical perception, both theoretical and experimental, provide a scientific foundation for the construction area of statistical graphics. From these studies a paradigm that has important applications for practice has begun to emerge. The paradigm is based on elementary codes: Basic geometric and textural aspects of a graph that encode the quantitative information. The methodology that can be invoked to study graphical perception is illustrated by an investigation of the shape parameter of a two-variable graph, a topic that has had much discussion, but little scientific study, for at least 70 years.},
  author = {William S. Cleveland and Robert McGill},
- journal = {Journal of the Royal Statistical Society. Series A (General)},
+ journal = {Journal of the Royal Statistical Society Series A},
  number = {3},
  pages = {192--229},
- publisher = {[Royal Statistical Society, Wiley]},
+ publisher = {Royal Statistical Society, Wiley},
  title = {Graphical Perception: The Visual Decoding of Quantitative Information on Graphical Displays of Data},
  volume = {150},
- year = {1987}
-}
-
+ year = {1987},
+ URL = {http://www.jstor.org/stable/2981473}
+ }
 
 
 @article{Cleveland.McGill1984,
-  abstract = {The subject of graphical methods for data analysis and for data presentation needs a scientific foundation. In this article we take a few steps in the direction of establishing such a foundation. Our approach is based on graphical perception-the visual decoding of information encoded on graphs-and it includes both theory and experimentation to test the theory. The theory deals with a small but important piece of the whole process of graphical perception. The first part is an identification of a set of elementary perceptual tasks that are carried out when people extract quantitative information from graphs. The second part is an ordering of the tasks on the basis of how accurately people perform them. Elements of the theory are tested by experimentation in which subjects record their judgments of the quantitative information on graphs. The experiments validate these elements but also suggest that the set of elementary tasks should be expanded. The theory provides a guideline for graph construction: Graphs should employ elementary tasks as high in the ordering as possible. This principle is applied to a variety of graphs, including bar charts, divided bar charts, pie charts, and statistical maps with shading. The conclusion is that radical surgery on these popular graphs is needed, and as replacements we offer alternative graphical forms-dot charts, dot charts with grouping, and framed-rectangle charts.},
-  added-at = {2012-05-05T17:00:53.000+0200},
   author = {Cleveland, William S. and McGill, Robert},
-  biburl = {https://www.bibsonomy.org/bibtex/25234fbbabcf2ac0bfab4f335af2f18ee/procomun},
-  copyright = {Copyright © 1984 American Statistical Association},
-  file = {Cleveland.McGill1984.pdf:Cleveland.McGill1984.pdf:PDF},
-  groups = {public},
-  interhash = {8f85e9b8f15a85291d8c1d47c1c42e84},
-  intrahash = {5234fbbabcf2ac0bfab4f335af2f18ee},
-  issn = {01621459},
   journal = {Journal of the American Statistical Association},
-  jstor_articletype = {research-article},
-  jstor_formatteddate = {Sep., 1984},
-  keywords = {},
-  language = {English},
-  number = 387,
+  number = {387},
   pages = {pp. 531-554},
   publisher = {American Statistical Association},
-  timestamp = {2012-05-05T17:00:53.000+0200},
   title = {Graphical Perception: Theory, Experimentation, and Application to the Development of Graphical Methods},
   url = {http://www.jstor.org/stable/2288400},
-  username = {procomun},
-  volume = 79,
-  year = 1984
+  volume = {79},
+  year = {1984}
 }
 
 @article{Cleveland1984,
-author = { William S. Cleveland},
+author = {William S. Cleveland},
 title = {Graphs in Scientific Publications},
 journal = {The American Statistician},
 volume = {38},
