Add session info to case 1

--- a/_posts/401-case1-eda/401-case1-eda.Rmd
+++ b/_posts/401-case1-eda/401-case1-eda.Rmd
@@ -113,4 +113,7 @@ my_data %>%
 
 Consider Figure 3, where instead of estimating an overall trend we now look at the trends within dose. Clearly, any apparent trends within dose do not follow a consistent pattern across doses. The only reason why exposure and response appeared associated in the previous two plots is that they share a common cause, namely dose. In other words, dose is a confounder in those plots, and indeed dose is a better predictor of response than systemic concentration. We should build a dose-response model, rather than an exposure-response model, and choose a recommended dose based on this (and any information on safety and tolerability).
 
+```{r}
+sessionInfo()
+```
 
