reduce to the three complete cases

--- a/_posts/201-three-laws-vizcom/201-three-laws-vizcom.Rmd
+++ b/_posts/201-three-laws-vizcom/201-three-laws-vizcom.Rmd
@@ -16,7 +16,7 @@ bibliography: refs.bib
 categories:
   - three laws
   - principles
-draft: FALSE
+draft: TRUE
 output:
   radix::radix_article:
     self_contained: FALSE
