--- a/_posts/101-intro-vizcom/101-intro-vizcom.Rmd
+++ b/_posts/101-intro-vizcom/101-intro-vizcom.Rmd
@@ -14,7 +14,7 @@ author:
 date: "`r Sys.Date()`"
 categories:
   - introduction
-draft: FALSE
+draft: TRUE
 bibliography: biblio.bib
 preview: https://raw.githubusercontent.com/GraphicsPrinciples/GraphicsPrinciples.github.io/master/assets/2018-11-06_thumbnail.png
 output:
