--- a/index.qmd
+++ b/index.qmd
@@ -4,11 +4,11 @@ description: "Example notebooks including tutorial case studies"
 listing:
   contents: posts/**/*.qmd
   sort: "date desc"
-  type: default
+  type: grid
   categories: true
   sort-ui: true
   filter-ui: true
-  fields: [date, title, reading-time, description, categories]
+  fields: [date, title, image, description, categories]
   feed: true
 page-layout: full
 title-block-banner: true
