--- a/posts/301-cheatsheet/301-cheatsheet.qmd
+++ b/posts/301-cheatsheet/301-cheatsheet.qmd
@@ -16,8 +16,12 @@ categories:
   - principles
 bibliography: paper.bib
 draft: false
-preview: https://raw.githubusercontent.com/GraphicsPrinciples/GraphicsPrinciples.github.io/master/assets/2018-11-06_thumbnail.png
+image: "../../assets/2018-11-06_thumbnail.png"
 ---
+
+## Cheat sheet
+
+![Cheat sheet](../../assets/2018-11-06_thumbnail.png)
 
 
 The three laws outlined [here](https://graphicsprinciples.github.io/tutorial-case-studies/posts/201-three-laws-vizcom/) provide overarching principled advice, and should serve as a guiding star towards effective visual communication for the quantitative scientist. To further ease their implementation in practice, it helps to distill even more detailed recommendations and to illustrate them concretely.
