--- a/posts/101-intro-vizcom/101-intro-vizcom.qmd
+++ b/posts/101-intro-vizcom/101-intro-vizcom.qmd
@@ -14,7 +14,7 @@ date: today
 categories:
   - introduction
   - EVC
-draft: false
+draft: true
 bibliography: biblio.bib
 image: "../../assets/EVC.png"
 ---
