--- a/posts/404-case4-subgroup/404-case4-subgroup.qmd
+++ b/posts/404-case4-subgroup/404-case4-subgroup.qmd
@@ -15,7 +15,7 @@ categories:
   - case studies
   - example code
 bibliography: paper.bib
-draft: true
+draft: false
 ---
 
 ```{r setup, include = FALSE}
